<resources>
    <string name="app_name">AdDroneApplication</string>
    <string name="action_settings">Settings</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_new_connection">Add new connection</string>
    <string name="fill_all_fields">Fill all fields to continue.</string>
    <string name="choose_connection">Choose Connection</string>
    <string name="add_new">Add new</string>

    <string name="pref_control_settings">Frequency settings</string>
    <string name="pref_con_con_freq">Sending control data</string>
    <string name="pref_con_ping_freq">Update delay time</string>
    <string name="pref_con_auto_freq">Autopilot data retransmission</string>
    <string name="pref_con_divider">Frequency divider</string>
    <string name="pref_con_con_freq_dsc">Frequency of sending control data</string>
    <string name="pref_con_ping_freq_dsc">Frequency of update delay time</string>
    <string name="pref_con_auto_freq_dsc">Frequency of autopilot data retransmission</string>
    <string name="pref_con_divider_dsc">Divider of frequency when lower is possible</string>

    <string name="pref_drone_settings">Drone settings</string>
    <string name="pref_con_solver_mode">Type of control interpretation</string>
    <string name="pref_con_battery_type">Number of battery cells</string>
    <string name="pref_con_solver_mode_dsc">Type of control interpretation</string>
    <string name="pref_con_battery_type_dsc">Number of battery cells</string>

    <string name="settings">Settings</string>
    <string name="pref_ui_refresh_rate">UI refresh rate</string>
    <string name="pref_ui_refresh_rate_summ">Set the frequency at which map is updated</string>
    <string name="pref_comet_length">Comet length</string>
    <string name="pref_comet_length_summ">Length of comet tail(sec)</string>
    <string name="pref_error_joy_time">Time to send error joystic</string>
    <string name="pref_error_joy_time_summ">Time to send error joystic (sec)</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="add_one_to_connect">Add at least one connection to be able to connect</string>
    <string name="invalid_ip_format">Invalid IP format.</string>
    <string name="latency">latency</string>
    <string name="autopilot">autopilot</string>
    <string name="available">available</string>
    <string name="disabled">disabled</string>
    <string name="battery">battery</string>
    <string name="latitude">lat</string>
    <string name="longitude">lon</string>
    <string name="action">Action</string>

    <string name="connection_name">Name</string>
    <string name="connection_description">Description</string>
    <string name="control_name">AdDroneApplication</string>
    <string name="end_fly">End fly</string>
    <string name="autopilot_destination">Autopilot destination</string>
    <string name="drone_position">Position of the drone</string>
    <string name="following_drone">Following the drone.</string>
    <string name="close">Close</string>
    <string name="fly">Fly</string>
    <string name="calibrate_accelerometer">Calibrate accelerometer</string>
    <string name="calibrate_magnetometer">Calibrate magnetometer</string>
    <string name="disconnect">Disconnect</string>
    <string name="view_calibration">View calibration</string>
    <string name="view_control">View control</string>
    <string name="flip">Flip</string>
    <string name="gyro">Gyro:</string>
    <string name="magnet">Magnet Soft:</string>
    <string name="hard">Magnet Hard:</string>
    <string name="altimeter">Altimeter:</string>
    <string name="temperature">Temperature:</string>
    <string name="celsius">Celsius</string>
    <string name="board_type">Board type:</string>
    <string name="acceleration">Acceleration:</string>
    <string name="update">Update</string>
    <string name="upload">Upload</string>
    <string name="manage_control_settings">Manage control settings</string>
    <string name="manage_route">Manage route</string>
    
    <string name="uav_type">Uav Type</string>
    <string name="initial_solver_mode">Initial Solver Mode</string>
    <string name="manual_throttle_mode">Manual Throttle Mode</string>
    <string name="auto_landing_descend_rate">Auto Landing Descend Rate</string>
    <string name="max_auto_landing_time">Max Auto Landing Time</string>
    <string name="max_roll_pitch_control_value">Max Roll Pitch Control Value</string>
    <string name="max_yaw_control_value">Max Roll Control Value</string>
    <string name="pid_roll_rateX">Pid Roll Rate X</string>
    <string name="pid_roll_rateY">Pid Roll Rate Y</string>
    <string name="pid_roll_rateZ">Pid Roll Rate Z</string>
    <string name="pid_pitch_rateX">Pid Pitch Rate X</string>
    <string name="pid_pitch_rateY">Pid Pitch Rate Y</string>
    <string name="pid_pitch_rateZ">Pid Pitch Rate Z</string>
    <string name="pid_yaw_rateX">Pid Yaw Rate X</string>
    <string name="pid_yaw_rateY">Pid Yaw Rate Y</string>
    <string name="pid_yaw_rateZ">Pid Yaw Rate Z</string>
    <string name="pid_roll_prop">Pid Roll Prop</string>
    <string name="pid_pitch_prop">Pid Pitch Prop</string>
    <string name="pid_yaw_prop">Pid Yaw Prop</string>
    <string name="alt_position_prop">Alt Position Prop</string>
    <string name="alt_velocity_prop">Alt Velocity Prop</string>
    <string name="pid_throttle_accelX">Pid Throttle Accel X</string>
    <string name="pid_throttle_accelY">Pid Throttle Accel Y</string>
    <string name="pid_throttle_accelZ">Pid Throttle Accel Z</string>
    <string name="throttle_alt_rate_prop">Throttle Alt Rate Prop</string>
    <string name="max_auto_angle">Max Auto Angle</string>
    <string name="max_auto_velocity">Max Auto Velocity</string>
    <string name="auto_position_prop">Auto Position Prop</string>
    <string name="auto_velocity_prop">Auto Velocity Prop</string>
    <string name="pid_auto_accelX">Pid Auto Accel X</string>
    <string name="pid_auto_accelY">Pid Auto Accel Y</string>
    <string name="pid_auto_accelZ">Pid Auto Accel Z</string>
    <string name="stick_position_rate_prop">Stick Position Rate Prop</string>
    <string name="stick_movement_mode">Stick Movement Mode</string>
    <string name="battery_type">Battery Type</string>
    <string name="error_handling_action">Error Handling Action</string>
    <string name="board_configuration">board_configuration</string>
</resources>
