<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_lg">

    <EditText
        android:hint="@string/name"
        android:id="@+id/edit_text_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_marginBottom="@dimen/margin_sm"/>

    <EditText
        android:hint="@string/ip_address"
        android:id="@+id/edit_text_ip_address"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal|text"
        android:layout_marginBottom="@dimen/margin_sm"/>

    <EditText
        android:hint="@string/port"
        android:id="@+id/edit_text_port"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="number"/>

</LinearLayout>